# ARC-Speak-Client

./: README.md  ReadMe_zh.md  pyproject.toml  requirements.txt
src/: audio_manager.py  color_palette.py  config_loader.py  main.py  message_manager.py  network_manager.py  ui_manager.py
