[project]
name = "arc-speak"
version = "0.1.0"
description = "This is a extremely light voice and text chat application built with Python, Flask, Socket.IO, and Flet, supporting multi-user, multi-channel real-time communication."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "DEVILENMO", email = "yliuna@conect.ust.hk" }
]
dependencies = [
  "flet==0.28.2"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.clanarc"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "ARC Speak"

# company name to display in about app dialogs
company = "ARC Club"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by ARC Club"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}